--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "ngx-infinite-scroll": "^10.0.1",
+    "ngx-order-pipe": "^2.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
